Fixed a few misalignments within the HTML and CSS.

--- a/professional-portfolio/src/App.css
+++ b/professional-portfolio/src/App.css
@@ -184,7 +184,7 @@ form {
 }
 .project-video-link {
     display: inline-block;
-    margin: 8px 15px;
+    margin: 15px 15px 25px 15px;
     color: rgb(191, 194, 3);
     text-decoration: none;
     font-size: x-large;
